[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.46"
nom = "8.0.0"
orgauth = { version = "0.1.0", path = "../orgauth/rustlib" }
reqwest = { version = "0.12.23", features = ["blocking"] }
serde_json = "1.0.143"
zkprotocol = { version = "0.1.0", path = "../zkprotocol" }
