[package]
name = "onsave"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.47"
futures-lite = "2.6.1"
lapin = "3.4.0"
serde_json = "1.0.143"
tokio = {version="1.47.1", features=["rt-multi-thread", "macros"]}
tracing = "0.1.41"
zkprotocol = { version = "0.1.0", path = "../zkprotocol" }
