[package]
name = "onsave"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.47"
futures-lite = "2.6.1"
glob = "0.3.3"
lapin = "3.4.0"
reqwest = { version ="0.12.23", default-features=false, features = [ "rustls-tls"]}
# reqwest = { version ="0.12.23",  features = [ "rustls-tls"]}
# reqwest = { version ="0.12.23",  features = [ "rustls-tls-manual-roots"]}
serde_json = "1.0.143"
tl = "0.7.8"
tokio = {version="1.47.1", features=["rt-multi-thread", "macros"]}
tracing = "0.1.41"
uuid = "1.18.1"
zkprotocol = { version = "0.1.0", path = "../zkprotocol" }
