[package]
name = "zknotes-server-lib"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]
edition = "2018"

[dependencies]
zkprotocol = { path = "../zkprotocol" }
orgauth = { path = "../orgauth/rustlib/" }
env_logger = "0.11.8"
# env_logger = { version = "0.11.5", features = ["anstream"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
log = "0.4.28"
actix-web = "4.11.0"
actix-files = "0.6.7"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-cors = "0.6.5"
actix-multipart = "0.6.2"
futures = "0.3.31"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.143"
uuid = { version = "1.18", features = ["serde", "v4", "fast-rng"] }
time = "0.3.43"
rand = "0.5.6"
toml = "0.5.11"
simple-error = "0.2.3"
json = "*"
barrel = { version = "0.7.0", features = ["sqlite3"] }
clap = "2.34.0"
timer = "0.2.0"
chrono = "0.4.41"
either = "1.15.0"
sha256 = "1.6.0"
tracing-actix-web = "0.7"
tracing = "0.1"
reqwest = { version = "0.11.27", default-features = false, features = ["cookies", "rustls-tls", "stream"] }
bytes = "1.10.1"
async-stream = "0.3.6"
# tokio-rustls = { version = "*", default-features = false, features = ["ring"] }
tokio-util = "0.7.16"
tokio = "1.47.1"
regex = "1.11.2"
awc = { version = "3.7.0", features = ["cookies", "rustls"] }
cookie = "0.16.2"
actix-multipart-rfc7578 = "0.10.0"
mime = "0.3.17"
actix-rt = "2.11.0"
girlboss = {version = "1.0.0-alpha.4", features = ["actix-rt"]}
nom = "8.0.0"
lapin = { version = "3.7.2", default-features = false, features = [ "rustls--ring" ] }
