[package]
name = "server"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]

[dependencies]
base64 = "0.2.1"
env_logger = "0.5.13"
rusqlite = "0.20.0"
log = "0.4.0"
actix-web = "1.0.8"
actix-rt = "0.2.5"
actix-files = "0.1.7"
futures = "0.1.25"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
uuid = { version = "0.6", features = ["v4"] }
crypto-hash = "0.3.1"
time = "0.1"
rand = "0.5.0"
toml = "0.4.8"
simple-error = "0.2.1"
json = "*"
reqwest = "0.9.24"
lettre = "0.9"
lettre_email = "0.9"
