[package]
name = "zkprotocol"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elm_rs =  { version = "0.2.2", features = ["uuid"] }
nom = "8.0.0"
orgauth = { path = "../orgauth/rustlib/" }
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
uuid = { version = "1.7", features = ["serde", "v4", "fast-rng"] }
